# ncmc

./: .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  clippy.toml
.cargo/: config.toml
.github/workflows/: publish.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
crates/ncm_core/: Cargo.toml
crates/ncm_core/src/: audio.rs  core.key  decoder.rs  image.rs  key.rs  lib.rs  ncm_rc4.rs
crates/ncm_meta/: Cargo.toml
crates/ncm_meta/src/: lib.rs  music_meta.rs  tool_info
crates/ncmc/: Cargo.toml
crates/ncmc/src/: main.rs
crates/ncmc/tests/: test.rs
crates/ncmc/tests/input/: 1356233945.comment  1356233945.json  1356233945.key  1356233945.ncm  1431343706.comment  1431343706.json  1431343706.key  1431343706.ncm  1434241304.comment  1434241304.json  1434241304.key  1434241304.ncm  1463406864.comment  1463406864.json  1463406864.key  1463406864.ncm  1481911318.comment  1481911318.json  1481911318.key  1481911318.ncm  1832399351.comment  1832399351.json  1832399351.key  1832399351.ncm  31654862.comment  31654862.json  31654862.key  31654862.ncm  509330088.comment  509330088.json  509330088.key  509330088.ncm  583277.comment  583277.json  583277.key  583277.ncm  807325.comment  807325.json  807325.key  807325.ncm
crates/ncmc_wasm/: Cargo.toml
crates/ncmc_wasm/src/: lib.rs
crates/ncmcore/: Cargo.toml
crates/ncmcore/src/: audio.rs  decoder.rs  image.rs  key.rs  lib.rs  meta.key
src/: lib.rs  main.rs
