[workspace]
members  = ["crates/*"]
resolver = "2"

    [workspace.package]
    authors    = ["magic-akari <akari.ccino@gmail.com>"]
    edition    = "2021"
    homepage   = "https://github.com/magic-akari/ncmc"
    license    = "MIT"
    readme     = "README.md"
    repository = "https://github.com/magic-akari/ncmc"
    version    = "0.2.9"

    [workspace.dependencies]
    anyhow   = "1.0.80"
    ncm_core = { version = "0.2.9", path = "crates/ncm_core" }
    ncm_meta = { version = "0.2.9", path = "crates/ncm_meta" }

[profile.release]
lto   = true
panic = "abort"
strip = "debuginfo"
