[workspace]
members  = ["crates/*"]
resolver = "2"

    [workspace.package]
    authors    = ["magic-akari <akari.ccino@gmail.com>"]
    edition    = "2021"
    homepage   = "https://github.com/magic-akari/ncmc"
    license    = "MIT"
    readme     = "README.md"
    repository = "https://github.com/magic-akari/ncmc"
    version    = "0.2.9"

    [workspace.dependencies]
    ncm_core = { version = "0.2.9", path = "crates/ncm_core" }
    ncm_meta = { version = "0.2.9", path = "crates/ncm_meta" }

    aes                = "0.8.4"
    anyhow             = "1.0.80"
    base64             = "0.22.0"
    bpaf               = "0.9"
    ecb                = "0.1.2"
    id3                = "1.13.1"
    js-sys             = "0.3.69"
    metaflac           = "0.2.5"
    miniserde          = "0.1"
    serde-wasm-bindgen = "0.6"
    testing            = "0.35.21"
    wasm-bindgen       = "0.2.92"

[profile.release]
lto   = true
panic = "abort"
strip = "debuginfo"
