[package]
name = "ncm_core"

description = "core decoder for ncmc"
keywords    = ["ncm", "ncmc", "ncmdump"]

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
readme     = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
aes    = "0.8.4"
anyhow = { workspace = true }
base64 = "0.22.1"
ecb    = "0.1.2"
