[package]
name = "ncm_meta"

description = "music meta utils for ncmc"
keywords    = ["ncm", "ncmc", "ncmdump"]

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
readme     = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[dependencies]
anyhow    = { workspace = true }
id3       = "1.13.1"
metaflac  = "0.2.5"
miniserde = "0.1"
ncm_core  = { workspace = true }
