[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "convert encrypted ncm file to original music file."
edition     = "2021"
homepage    = "https://github.com/magic-akari/ncmc"
keywords    = ["ncm", "cli", "converter", "ncmdump"]
license     = "MIT"
name        = "ncmc"
readme      = "README.md"
repository  = "https://github.com/magic-akari/ncmc"
version     = "0.2.0"

[profile.release]
lto   = true
panic = "abort"
