[package]
name = "ncmc"

description = "convert encrypted ncm file to original music file."
keywords    = ["ncm", "ncmc", "cli", "converter", "ncmdump"]

authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
readme     = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }


[dependencies]
anyhow   = { workspace = true }
bpaf     = { workspace = true, features = ["derive"] }
ncm_core = { workspace = true }
ncm_meta = { workspace = true }

[dev-dependencies]
testing = { workspace = true }
