[package]
name = "ncmcore"
version = "0.1.0"
edition = "2021"
authors = ["magic-akari <akari.ccino@gmail.com>"]
homepage = "https://github.com/magic-akari/ncmc"
repository = "https://github.com/magic-akari/ncmc"
license = "MIT"
readme = "README.md"

[dependencies]
aes = "0.8.1"
ecb = "0.1.0"
anyhow = "1.0.57"
base64 = "0.13.0"
