[package]
authors    = ["magic-akari <akari.ccino@gmail.com>"]
edition    = "2021"
homepage   = "https://github.com/magic-akari/ncmc"
license    = "MIT"
name       = "ncmcore"
readme     = "README.md"
repository = "https://github.com/magic-akari/ncmc"
version    = "0.1.0"

[dependencies]
aes    = "0.8.1"
anyhow = "1.0.60"
base64 = "0.13.0"
ecb    = "0.1.1"

[dev-dependencies]
testing_macros = "0.2.7"
